@@ -221,6 +221,8 @@ Other Changes
 
 * SOLR-9386: Upgrade Zookeeper to 3.4.10. (Shawn Heisey, Steve Rowe)
 
+* SOLR-10519: SolrCLI.atPath cannot handle children that begin with a slash. (Erick Erickson)
+
 ==================  6.5.1 ==================
 
 Bug Fixes
